--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
-    "classnames": "^2.5.1",
-    "jest": "^29.7.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.25.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "classnames": "^2.5.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-react-refresh": "^0.4.9",
     "gh-pages": "^6.1.1",
-    "vite": "^5.3.4"
+    "jest": "^29.7.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.0",
+    "vite": "^5.3.5"
   }
 }
