update main.jsx and package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://s1epan.github.io/FindFood.io/content",
   "name": "foodproject",
   "private": true,
   "version": "0.0.0",
