--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://s1epan.github.io/FindFood.io/content",
+  "homepage": "https://s1epan.github.io/FindFood.io",
   "name": "foodproject",
   "private": true,
   "version": "0.0.0",
